// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/repo-details snapshots empty language story matches snapshot 1`] = `
<div
  className="ant-card ant-card-bordered"
>
  <div
    className="ant-card-body"
    style={Object {}}
  >
    <h3>
      <span
        className="ant-avatar ant-avatar-lg ant-avatar-circle ant-avatar-image"
        style={Object {}}
      >
        <img
          onError={[Function]}
          src="https://avatars3.githubusercontent.com/u/69631?v=4"
        />
      </span>
       
      facebook/react
    </h3>
    <p>
      A declarative, efficient, and flexible JavaScript library for building user interfaces.
    </p>
    <p>
      last updated: 
      9/21/2020, 5:38:10 PM
       
      <span
        aria-label="sync"
        className="anticon anticon-sync"
        onClick={[MockFunction]}
        role="img"
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="sync"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
          />
        </svg>
      </span>
    </p>
    <div
      className="sc-AxirZ qsqry"
    >
      <p>
        <span
          aria-label="star"
          className="anticon anticon-star"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="star"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
            />
          </svg>
        </span>
         
        156,180
      </p>
      <p>
        <span
          aria-label="fork"
          className="anticon anticon-fork"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="fork"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M752 100c-61.8 0-112 50.2-112 112 0 47.7 29.9 88.5 72 104.6v27.6L512 601.4 312 344.2v-27.6c42.1-16.1 72-56.9 72-104.6 0-61.8-50.2-112-112-112s-112 50.2-112 112c0 50.6 33.8 93.5 80 107.3v34.4c0 9.7 3.3 19.3 9.3 27L476 672.3v33.6c-44.2 15-76 56.9-76 106.1 0 61.8 50.2 112 112 112s112-50.2 112-112c0-49.2-31.8-91-76-106.1v-33.6l226.7-291.6c6-7.7 9.3-17.3 9.3-27v-34.4c46.2-13.8 80-56.7 80-107.3 0-61.8-50.2-112-112-112zM224 212a48.01 48.01 0 0196 0 48.01 48.01 0 01-96 0zm336 600a48.01 48.01 0 01-96 0 48.01 48.01 0 0196 0zm192-552a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </span>
         
        30,730
      </p>
    </div>
    <div
      className="sc-AxirZ qsqry"
      style={
        Object {
          "marginBottom": 16,
        }
      }
    >
      <a
        className="ant-btn"
        href="/home"
        onClick={[Function]}
      >
        <span
          aria-label="left-circle"
          className="anticon anticon-left-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="left-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm104 316.9c0 10.2-4.9 19.9-13.2 25.9L457.4 512l145.4 105.2c8.3 6 13.2 15.6 13.2 25.9V690c0 6.5-7.4 10.3-12.7 6.5l-246-178a7.95 7.95 0 010-12.9l246-178a8 8 0 0112.7 6.5v46.8z"
            />
          </svg>
        </span>
        <span>
          Back
        </span>
      </a>
      <a
        className="ant-btn ant-btn-primary"
        href="https://reactjs.org"
        onClick={[Function]}
        target="_blank"
      >
        <span
          aria-label="global"
          className="anticon anticon-global"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="global"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M854.4 800.9c.2-.3.5-.6.7-.9C920.6 722.1 960 621.7 960 512s-39.4-210.1-104.8-288c-.2-.3-.5-.5-.7-.8-1.1-1.3-2.1-2.5-3.2-3.7-.4-.5-.8-.9-1.2-1.4l-4.1-4.7-.1-.1c-1.5-1.7-3.1-3.4-4.6-5.1l-.1-.1c-3.2-3.4-6.4-6.8-9.7-10.1l-.1-.1-4.8-4.8-.3-.3c-1.5-1.5-3-2.9-4.5-4.3-.5-.5-1-1-1.6-1.5-1-1-2-1.9-3-2.8-.3-.3-.7-.6-1-1C736.4 109.2 629.5 64 512 64s-224.4 45.2-304.3 119.2c-.3.3-.7.6-1 1-1 .9-2 1.9-3 2.9-.5.5-1 1-1.6 1.5-1.5 1.4-3 2.9-4.5 4.3l-.3.3-4.8 4.8-.1.1c-3.3 3.3-6.5 6.7-9.7 10.1l-.1.1c-1.6 1.7-3.1 3.4-4.6 5.1l-.1.1c-1.4 1.5-2.8 3.1-4.1 4.7-.4.5-.8.9-1.2 1.4-1.1 1.2-2.1 2.5-3.2 3.7-.2.3-.5.5-.7.8C103.4 301.9 64 402.3 64 512s39.4 210.1 104.8 288c.2.3.5.6.7.9l3.1 3.7c.4.5.8.9 1.2 1.4l4.1 4.7c0 .1.1.1.1.2 1.5 1.7 3 3.4 4.6 5l.1.1c3.2 3.4 6.4 6.8 9.6 10.1l.1.1c1.6 1.6 3.1 3.2 4.7 4.7l.3.3c3.3 3.3 6.7 6.5 10.1 9.6 80.1 74 187 119.2 304.5 119.2s224.4-45.2 304.3-119.2a300 300 0 0010-9.6l.3-.3c1.6-1.6 3.2-3.1 4.7-4.7l.1-.1c3.3-3.3 6.5-6.7 9.6-10.1l.1-.1c1.5-1.7 3.1-3.3 4.6-5 0-.1.1-.1.1-.2 1.4-1.5 2.8-3.1 4.1-4.7.4-.5.8-.9 1.2-1.4a99 99 0 003.3-3.7zm4.1-142.6c-13.8 32.6-32 62.8-54.2 90.2a444.07 444.07 0 00-81.5-55.9c11.6-46.9 18.8-98.4 20.7-152.6H887c-3 40.9-12.6 80.6-28.5 118.3zM887 484H743.5c-1.9-54.2-9.1-105.7-20.7-152.6 29.3-15.6 56.6-34.4 81.5-55.9A373.86 373.86 0 01887 484zM658.3 165.5c39.7 16.8 75.8 40 107.6 69.2a394.72 394.72 0 01-59.4 41.8c-15.7-45-35.8-84.1-59.2-115.4 3.7 1.4 7.4 2.9 11 4.4zm-90.6 700.6c-9.2 7.2-18.4 12.7-27.7 16.4V697a389.1 389.1 0 01115.7 26.2c-8.3 24.6-17.9 47.3-29 67.8-17.4 32.4-37.8 58.3-59 75.1zm59-633.1c11 20.6 20.7 43.3 29 67.8A389.1 389.1 0 01540 327V141.6c9.2 3.7 18.5 9.1 27.7 16.4 21.2 16.7 41.6 42.6 59 75zM540 640.9V540h147.5c-1.6 44.2-7.1 87.1-16.3 127.8l-.3 1.2A445.02 445.02 0 00540 640.9zm0-156.9V383.1c45.8-2.8 89.8-12.5 130.9-28.1l.3 1.2c9.2 40.7 14.7 83.5 16.3 127.8H540zm-56 56v100.9c-45.8 2.8-89.8 12.5-130.9 28.1l-.3-1.2c-9.2-40.7-14.7-83.5-16.3-127.8H484zm-147.5-56c1.6-44.2 7.1-87.1 16.3-127.8l.3-1.2c41.1 15.6 85 25.3 130.9 28.1V484H336.5zM484 697v185.4c-9.2-3.7-18.5-9.1-27.7-16.4-21.2-16.7-41.7-42.7-59.1-75.1-11-20.6-20.7-43.3-29-67.8 37.2-14.6 75.9-23.3 115.8-26.1zm0-370a389.1 389.1 0 01-115.7-26.2c8.3-24.6 17.9-47.3 29-67.8 17.4-32.4 37.8-58.4 59.1-75.1 9.2-7.2 18.4-12.7 27.7-16.4V327zM365.7 165.5c3.7-1.5 7.3-3 11-4.4-23.4 31.3-43.5 70.4-59.2 115.4-21-12-40.9-26-59.4-41.8 31.8-29.2 67.9-52.4 107.6-69.2zM165.5 365.7c13.8-32.6 32-62.8 54.2-90.2 24.9 21.5 52.2 40.3 81.5 55.9-11.6 46.9-18.8 98.4-20.7 152.6H137c3-40.9 12.6-80.6 28.5-118.3zM137 540h143.5c1.9 54.2 9.1 105.7 20.7 152.6a444.07 444.07 0 00-81.5 55.9A373.86 373.86 0 01137 540zm228.7 318.5c-39.7-16.8-75.8-40-107.6-69.2 18.5-15.8 38.4-29.7 59.4-41.8 15.7 45 35.8 84.1 59.2 115.4-3.7-1.4-7.4-2.9-11-4.4zm292.6 0c-3.7 1.5-7.3 3-11 4.4 23.4-31.3 43.5-70.4 59.2-115.4 21 12 40.9 26 59.4 41.8a373.81 373.81 0 01-107.6 69.2z"
            />
          </svg>
        </span>
        <span>
          Homepage
        </span>
      </a>
      <a
        className="ant-btn ant-btn-primary"
        href="https://github.com/facebook/react"
        onClick={[Function]}
        target="_blank"
      >
        <span
          aria-label="github"
          className="anticon anticon-github"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="github"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
            />
          </svg>
        </span>
        <span>
          View on GitHub
        </span>
      </a>
    </div>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<pre class=\\"__json-pretty__\\" style=\\"line-height:1.3;color:#66d9ef;background:#272822;overflow:auto;\\">{
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">id</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">10270250</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">node_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MDEwOlJlcG9zaXRvcnkxMDI3MDI1MA==\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">name</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">full_name</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"facebook/react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">private</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">owner</span>\\": {
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">login</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">id</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">69631</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">node_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MDEyOk9yZ2FuaXphdGlvbjY5NjMx\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">avatar_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://avatars3.githubusercontent.com/u/69631?v=4\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">gravatar_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">html_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">followers_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/followers\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">following_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/following{/other_user}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">gists_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/gists{/gist_id}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">starred_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/starred{/owner}{/repo}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscriptions_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/subscriptions\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">organizations_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/orgs\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">repos_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/repos\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/events{/privacy}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">received_events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/received_events\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">type</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"Organization\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">site_admin</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>
  },
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">html_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook/react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">description</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"A declarative, efficient, and flexible JavaScript library for building user interfaces.\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">fork</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">forks_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/forks\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">keys_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/keys{/key_id}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">collaborators_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/collaborators{/collaborator}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">teams_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/teams\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">hooks_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/hooks\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">issue_events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/issues/events{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/events\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">assignees_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/assignees{/user}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">branches_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/branches{/branch}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">tags_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/tags\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">blobs_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/blobs{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">git_tags_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/tags{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">git_refs_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/refs{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">trees_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/trees{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">statuses_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/statuses/{sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">languages_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/languages\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">stargazers_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/stargazers\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">contributors_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/contributors\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscribers_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/subscribers\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscription_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/subscription\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">commits_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/commits{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">git_commits_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/commits{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">comments_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/comments{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">issue_comment_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/issues/comments{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">contents_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/contents/{+path}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">compare_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/compare/{base}...{head}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">merges_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/merges\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">archive_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/{archive_format}{/ref}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">downloads_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/downloads\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">issues_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/issues{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">pulls_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/pulls{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">milestones_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/milestones{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">notifications_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/notifications{?since,all,participating}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">labels_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/labels{/name}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">releases_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/releases{/id}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">deployments_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/deployments\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">created_at</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"2013-05-24T16:15:54Z\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">updated_at</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"2020-09-21T23:38:10Z\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">pushed_at</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"2020-09-21T23:30:41Z\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">git_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"git://github.com/facebook/react.git\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">ssh_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"git@github.com:facebook/react.git\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">clone_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook/react.git\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">svn_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook/react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">homepage</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://reactjs.org\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">size</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">157796</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">stargazers_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">156180</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">watchers_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">156180</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">language</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_issues</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_projects</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_downloads</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_wiki</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_pages</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">forks_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">30730</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">mirror_url</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">null</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">archived</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">disabled</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">open_issues_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">575</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">license</span>\\": {
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">key</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"mit\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">name</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MIT License\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">spdx_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MIT\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/licenses/mit\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">node_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MDc6TGljZW5zZTEz\\"</span>
  },
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">forks</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">30730</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">open_issues</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">575</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">watchers</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">156180</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">default_branch</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"master\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">permissions</span>\\": {
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">admin</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">push</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">pull</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>
  },
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">temp_clone_token</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">organization</span>\\": {
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">login</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">id</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">69631</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">node_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MDEyOk9yZ2FuaXphdGlvbjY5NjMx\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">avatar_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://avatars3.githubusercontent.com/u/69631?v=4\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">gravatar_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">html_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">followers_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/followers\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">following_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/following{/other_user}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">gists_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/gists{/gist_id}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">starred_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/starred{/owner}{/repo}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscriptions_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/subscriptions\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">organizations_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/orgs\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">repos_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/repos\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/events{/privacy}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">received_events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/received_events\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">type</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"Organization\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">site_admin</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>
  },
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">network_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">30730</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscribers_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">6696</span>
}</pre>",
        }
      }
    />
  </div>
</div>
`;

exports[`components/repo-details snapshots no homepage story matches snapshot 1`] = `
<div
  className="ant-card ant-card-bordered"
>
  <div
    className="ant-card-body"
    style={Object {}}
  >
    <h3>
      <span
        className="ant-avatar ant-avatar-lg ant-avatar-circle ant-avatar-image"
        style={Object {}}
      >
        <img
          onError={[Function]}
          src="https://avatars3.githubusercontent.com/u/69631?v=4"
        />
      </span>
       
      facebook/react
    </h3>
    <p>
      A declarative, efficient, and flexible JavaScript library for building user interfaces.
    </p>
    <p>
      last updated: 
      9/21/2020, 5:38:10 PM
       
      <span
        aria-label="sync"
        className="anticon anticon-sync"
        onClick={[MockFunction]}
        role="img"
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="sync"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
          />
        </svg>
      </span>
    </p>
    <div
      className="sc-AxirZ qsqry"
    >
      <p>
        <span
          aria-label="code"
          className="anticon anticon-code"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="code"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M516 673c0 4.4 3.4 8 7.5 8h185c4.1 0 7.5-3.6 7.5-8v-48c0-4.4-3.4-8-7.5-8h-185c-4.1 0-7.5 3.6-7.5 8v48zm-194.9 6.1l192-161c3.8-3.2 3.8-9.1 0-12.3l-192-160.9A7.95 7.95 0 00308 351v62.7c0 2.4 1 4.6 2.9 6.1L420.7 512l-109.8 92.2a8.1 8.1 0 00-2.9 6.1V673c0 6.8 7.9 10.5 13.1 6.1zM880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
            />
          </svg>
        </span>
         
        JavaScript
      </p>
      <p>
        <span
          aria-label="star"
          className="anticon anticon-star"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="star"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
            />
          </svg>
        </span>
         
        156,180
      </p>
      <p>
        <span
          aria-label="fork"
          className="anticon anticon-fork"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="fork"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M752 100c-61.8 0-112 50.2-112 112 0 47.7 29.9 88.5 72 104.6v27.6L512 601.4 312 344.2v-27.6c42.1-16.1 72-56.9 72-104.6 0-61.8-50.2-112-112-112s-112 50.2-112 112c0 50.6 33.8 93.5 80 107.3v34.4c0 9.7 3.3 19.3 9.3 27L476 672.3v33.6c-44.2 15-76 56.9-76 106.1 0 61.8 50.2 112 112 112s112-50.2 112-112c0-49.2-31.8-91-76-106.1v-33.6l226.7-291.6c6-7.7 9.3-17.3 9.3-27v-34.4c46.2-13.8 80-56.7 80-107.3 0-61.8-50.2-112-112-112zM224 212a48.01 48.01 0 0196 0 48.01 48.01 0 01-96 0zm336 600a48.01 48.01 0 01-96 0 48.01 48.01 0 0196 0zm192-552a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </span>
         
        30,730
      </p>
    </div>
    <div
      className="sc-AxirZ qsqry"
      style={
        Object {
          "marginBottom": 16,
        }
      }
    >
      <a
        className="ant-btn"
        href="/home"
        onClick={[Function]}
      >
        <span
          aria-label="left-circle"
          className="anticon anticon-left-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="left-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm104 316.9c0 10.2-4.9 19.9-13.2 25.9L457.4 512l145.4 105.2c8.3 6 13.2 15.6 13.2 25.9V690c0 6.5-7.4 10.3-12.7 6.5l-246-178a7.95 7.95 0 010-12.9l246-178a8 8 0 0112.7 6.5v46.8z"
            />
          </svg>
        </span>
        <span>
          Back
        </span>
      </a>
      <a
        className="ant-btn ant-btn-primary"
        href="https://github.com/facebook/react"
        onClick={[Function]}
        target="_blank"
      >
        <span
          aria-label="github"
          className="anticon anticon-github"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="github"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
            />
          </svg>
        </span>
        <span>
          View on GitHub
        </span>
      </a>
    </div>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<pre class=\\"__json-pretty__\\" style=\\"line-height:1.3;color:#66d9ef;background:#272822;overflow:auto;\\">{
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">id</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">10270250</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">node_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MDEwOlJlcG9zaXRvcnkxMDI3MDI1MA==\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">name</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">full_name</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"facebook/react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">private</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">owner</span>\\": {
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">login</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">id</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">69631</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">node_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MDEyOk9yZ2FuaXphdGlvbjY5NjMx\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">avatar_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://avatars3.githubusercontent.com/u/69631?v=4\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">gravatar_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">html_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">followers_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/followers\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">following_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/following{/other_user}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">gists_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/gists{/gist_id}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">starred_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/starred{/owner}{/repo}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscriptions_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/subscriptions\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">organizations_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/orgs\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">repos_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/repos\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/events{/privacy}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">received_events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/received_events\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">type</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"Organization\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">site_admin</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>
  },
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">html_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook/react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">description</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"A declarative, efficient, and flexible JavaScript library for building user interfaces.\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">fork</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">forks_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/forks\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">keys_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/keys{/key_id}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">collaborators_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/collaborators{/collaborator}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">teams_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/teams\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">hooks_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/hooks\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">issue_events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/issues/events{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/events\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">assignees_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/assignees{/user}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">branches_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/branches{/branch}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">tags_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/tags\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">blobs_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/blobs{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">git_tags_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/tags{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">git_refs_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/refs{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">trees_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/trees{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">statuses_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/statuses/{sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">languages_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/languages\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">stargazers_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/stargazers\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">contributors_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/contributors\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscribers_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/subscribers\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscription_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/subscription\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">commits_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/commits{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">git_commits_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/commits{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">comments_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/comments{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">issue_comment_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/issues/comments{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">contents_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/contents/{+path}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">compare_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/compare/{base}...{head}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">merges_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/merges\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">archive_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/{archive_format}{/ref}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">downloads_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/downloads\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">issues_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/issues{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">pulls_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/pulls{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">milestones_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/milestones{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">notifications_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/notifications{?since,all,participating}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">labels_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/labels{/name}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">releases_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/releases{/id}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">deployments_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/deployments\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">created_at</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"2013-05-24T16:15:54Z\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">updated_at</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"2020-09-21T23:38:10Z\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">pushed_at</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"2020-09-21T23:30:41Z\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">git_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"git://github.com/facebook/react.git\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">ssh_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"git@github.com:facebook/react.git\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">clone_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook/react.git\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">svn_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook/react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">homepage</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">null</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">size</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">157796</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">stargazers_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">156180</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">watchers_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">156180</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">language</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"JavaScript\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_issues</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_projects</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_downloads</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_wiki</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_pages</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">forks_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">30730</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">mirror_url</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">null</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">archived</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">disabled</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">open_issues_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">575</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">license</span>\\": {
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">key</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"mit\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">name</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MIT License\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">spdx_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MIT\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/licenses/mit\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">node_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MDc6TGljZW5zZTEz\\"</span>
  },
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">forks</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">30730</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">open_issues</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">575</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">watchers</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">156180</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">default_branch</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"master\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">permissions</span>\\": {
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">admin</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">push</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">pull</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>
  },
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">temp_clone_token</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">organization</span>\\": {
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">login</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">id</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">69631</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">node_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MDEyOk9yZ2FuaXphdGlvbjY5NjMx\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">avatar_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://avatars3.githubusercontent.com/u/69631?v=4\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">gravatar_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">html_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">followers_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/followers\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">following_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/following{/other_user}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">gists_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/gists{/gist_id}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">starred_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/starred{/owner}{/repo}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscriptions_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/subscriptions\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">organizations_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/orgs\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">repos_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/repos\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/events{/privacy}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">received_events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/received_events\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">type</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"Organization\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">site_admin</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>
  },
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">network_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">30730</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscribers_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">6696</span>
}</pre>",
        }
      }
    />
  </div>
</div>
`;

exports[`components/repo-details snapshots sample story matches snapshot 1`] = `
<div
  className="ant-card ant-card-bordered"
>
  <div
    className="ant-card-body"
    style={Object {}}
  >
    <h3>
      <span
        className="ant-avatar ant-avatar-lg ant-avatar-circle ant-avatar-image"
        style={Object {}}
      >
        <img
          onError={[Function]}
          src="https://avatars3.githubusercontent.com/u/69631?v=4"
        />
      </span>
       
      facebook/react
    </h3>
    <p>
      A declarative, efficient, and flexible JavaScript library for building user interfaces.
    </p>
    <p>
      last updated: 
      9/21/2020, 5:38:10 PM
       
      <span
        aria-label="sync"
        className="anticon anticon-sync"
        onClick={[MockFunction]}
        role="img"
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="sync"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
          />
        </svg>
      </span>
    </p>
    <div
      className="sc-AxirZ qsqry"
    >
      <p>
        <span
          aria-label="code"
          className="anticon anticon-code"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="code"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M516 673c0 4.4 3.4 8 7.5 8h185c4.1 0 7.5-3.6 7.5-8v-48c0-4.4-3.4-8-7.5-8h-185c-4.1 0-7.5 3.6-7.5 8v48zm-194.9 6.1l192-161c3.8-3.2 3.8-9.1 0-12.3l-192-160.9A7.95 7.95 0 00308 351v62.7c0 2.4 1 4.6 2.9 6.1L420.7 512l-109.8 92.2a8.1 8.1 0 00-2.9 6.1V673c0 6.8 7.9 10.5 13.1 6.1zM880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
            />
          </svg>
        </span>
         
        JavaScript
      </p>
      <p>
        <span
          aria-label="star"
          className="anticon anticon-star"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="star"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
            />
          </svg>
        </span>
         
        156,180
      </p>
      <p>
        <span
          aria-label="fork"
          className="anticon anticon-fork"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="fork"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M752 100c-61.8 0-112 50.2-112 112 0 47.7 29.9 88.5 72 104.6v27.6L512 601.4 312 344.2v-27.6c42.1-16.1 72-56.9 72-104.6 0-61.8-50.2-112-112-112s-112 50.2-112 112c0 50.6 33.8 93.5 80 107.3v34.4c0 9.7 3.3 19.3 9.3 27L476 672.3v33.6c-44.2 15-76 56.9-76 106.1 0 61.8 50.2 112 112 112s112-50.2 112-112c0-49.2-31.8-91-76-106.1v-33.6l226.7-291.6c6-7.7 9.3-17.3 9.3-27v-34.4c46.2-13.8 80-56.7 80-107.3 0-61.8-50.2-112-112-112zM224 212a48.01 48.01 0 0196 0 48.01 48.01 0 01-96 0zm336 600a48.01 48.01 0 01-96 0 48.01 48.01 0 0196 0zm192-552a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </span>
         
        30,730
      </p>
    </div>
    <div
      className="sc-AxirZ qsqry"
      style={
        Object {
          "marginBottom": 16,
        }
      }
    >
      <a
        className="ant-btn"
        href="/home"
        onClick={[Function]}
      >
        <span
          aria-label="left-circle"
          className="anticon anticon-left-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="left-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm104 316.9c0 10.2-4.9 19.9-13.2 25.9L457.4 512l145.4 105.2c8.3 6 13.2 15.6 13.2 25.9V690c0 6.5-7.4 10.3-12.7 6.5l-246-178a7.95 7.95 0 010-12.9l246-178a8 8 0 0112.7 6.5v46.8z"
            />
          </svg>
        </span>
        <span>
          Back
        </span>
      </a>
      <a
        className="ant-btn ant-btn-primary"
        href="https://reactjs.org"
        onClick={[Function]}
        target="_blank"
      >
        <span
          aria-label="global"
          className="anticon anticon-global"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="global"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M854.4 800.9c.2-.3.5-.6.7-.9C920.6 722.1 960 621.7 960 512s-39.4-210.1-104.8-288c-.2-.3-.5-.5-.7-.8-1.1-1.3-2.1-2.5-3.2-3.7-.4-.5-.8-.9-1.2-1.4l-4.1-4.7-.1-.1c-1.5-1.7-3.1-3.4-4.6-5.1l-.1-.1c-3.2-3.4-6.4-6.8-9.7-10.1l-.1-.1-4.8-4.8-.3-.3c-1.5-1.5-3-2.9-4.5-4.3-.5-.5-1-1-1.6-1.5-1-1-2-1.9-3-2.8-.3-.3-.7-.6-1-1C736.4 109.2 629.5 64 512 64s-224.4 45.2-304.3 119.2c-.3.3-.7.6-1 1-1 .9-2 1.9-3 2.9-.5.5-1 1-1.6 1.5-1.5 1.4-3 2.9-4.5 4.3l-.3.3-4.8 4.8-.1.1c-3.3 3.3-6.5 6.7-9.7 10.1l-.1.1c-1.6 1.7-3.1 3.4-4.6 5.1l-.1.1c-1.4 1.5-2.8 3.1-4.1 4.7-.4.5-.8.9-1.2 1.4-1.1 1.2-2.1 2.5-3.2 3.7-.2.3-.5.5-.7.8C103.4 301.9 64 402.3 64 512s39.4 210.1 104.8 288c.2.3.5.6.7.9l3.1 3.7c.4.5.8.9 1.2 1.4l4.1 4.7c0 .1.1.1.1.2 1.5 1.7 3 3.4 4.6 5l.1.1c3.2 3.4 6.4 6.8 9.6 10.1l.1.1c1.6 1.6 3.1 3.2 4.7 4.7l.3.3c3.3 3.3 6.7 6.5 10.1 9.6 80.1 74 187 119.2 304.5 119.2s224.4-45.2 304.3-119.2a300 300 0 0010-9.6l.3-.3c1.6-1.6 3.2-3.1 4.7-4.7l.1-.1c3.3-3.3 6.5-6.7 9.6-10.1l.1-.1c1.5-1.7 3.1-3.3 4.6-5 0-.1.1-.1.1-.2 1.4-1.5 2.8-3.1 4.1-4.7.4-.5.8-.9 1.2-1.4a99 99 0 003.3-3.7zm4.1-142.6c-13.8 32.6-32 62.8-54.2 90.2a444.07 444.07 0 00-81.5-55.9c11.6-46.9 18.8-98.4 20.7-152.6H887c-3 40.9-12.6 80.6-28.5 118.3zM887 484H743.5c-1.9-54.2-9.1-105.7-20.7-152.6 29.3-15.6 56.6-34.4 81.5-55.9A373.86 373.86 0 01887 484zM658.3 165.5c39.7 16.8 75.8 40 107.6 69.2a394.72 394.72 0 01-59.4 41.8c-15.7-45-35.8-84.1-59.2-115.4 3.7 1.4 7.4 2.9 11 4.4zm-90.6 700.6c-9.2 7.2-18.4 12.7-27.7 16.4V697a389.1 389.1 0 01115.7 26.2c-8.3 24.6-17.9 47.3-29 67.8-17.4 32.4-37.8 58.3-59 75.1zm59-633.1c11 20.6 20.7 43.3 29 67.8A389.1 389.1 0 01540 327V141.6c9.2 3.7 18.5 9.1 27.7 16.4 21.2 16.7 41.6 42.6 59 75zM540 640.9V540h147.5c-1.6 44.2-7.1 87.1-16.3 127.8l-.3 1.2A445.02 445.02 0 00540 640.9zm0-156.9V383.1c45.8-2.8 89.8-12.5 130.9-28.1l.3 1.2c9.2 40.7 14.7 83.5 16.3 127.8H540zm-56 56v100.9c-45.8 2.8-89.8 12.5-130.9 28.1l-.3-1.2c-9.2-40.7-14.7-83.5-16.3-127.8H484zm-147.5-56c1.6-44.2 7.1-87.1 16.3-127.8l.3-1.2c41.1 15.6 85 25.3 130.9 28.1V484H336.5zM484 697v185.4c-9.2-3.7-18.5-9.1-27.7-16.4-21.2-16.7-41.7-42.7-59.1-75.1-11-20.6-20.7-43.3-29-67.8 37.2-14.6 75.9-23.3 115.8-26.1zm0-370a389.1 389.1 0 01-115.7-26.2c8.3-24.6 17.9-47.3 29-67.8 17.4-32.4 37.8-58.4 59.1-75.1 9.2-7.2 18.4-12.7 27.7-16.4V327zM365.7 165.5c3.7-1.5 7.3-3 11-4.4-23.4 31.3-43.5 70.4-59.2 115.4-21-12-40.9-26-59.4-41.8 31.8-29.2 67.9-52.4 107.6-69.2zM165.5 365.7c13.8-32.6 32-62.8 54.2-90.2 24.9 21.5 52.2 40.3 81.5 55.9-11.6 46.9-18.8 98.4-20.7 152.6H137c3-40.9 12.6-80.6 28.5-118.3zM137 540h143.5c1.9 54.2 9.1 105.7 20.7 152.6a444.07 444.07 0 00-81.5 55.9A373.86 373.86 0 01137 540zm228.7 318.5c-39.7-16.8-75.8-40-107.6-69.2 18.5-15.8 38.4-29.7 59.4-41.8 15.7 45 35.8 84.1 59.2 115.4-3.7-1.4-7.4-2.9-11-4.4zm292.6 0c-3.7 1.5-7.3 3-11 4.4 23.4-31.3 43.5-70.4 59.2-115.4 21 12 40.9 26 59.4 41.8a373.81 373.81 0 01-107.6 69.2z"
            />
          </svg>
        </span>
        <span>
          Homepage
        </span>
      </a>
      <a
        className="ant-btn ant-btn-primary"
        href="https://github.com/facebook/react"
        onClick={[Function]}
        target="_blank"
      >
        <span
          aria-label="github"
          className="anticon anticon-github"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="github"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
            />
          </svg>
        </span>
        <span>
          View on GitHub
        </span>
      </a>
    </div>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<pre class=\\"__json-pretty__\\" style=\\"line-height:1.3;color:#66d9ef;background:#272822;overflow:auto;\\">{
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">id</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">10270250</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">node_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MDEwOlJlcG9zaXRvcnkxMDI3MDI1MA==\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">name</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">full_name</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"facebook/react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">private</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">owner</span>\\": {
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">login</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">id</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">69631</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">node_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MDEyOk9yZ2FuaXphdGlvbjY5NjMx\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">avatar_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://avatars3.githubusercontent.com/u/69631?v=4\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">gravatar_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">html_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">followers_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/followers\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">following_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/following{/other_user}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">gists_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/gists{/gist_id}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">starred_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/starred{/owner}{/repo}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscriptions_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/subscriptions\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">organizations_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/orgs\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">repos_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/repos\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/events{/privacy}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">received_events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/received_events\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">type</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"Organization\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">site_admin</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>
  },
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">html_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook/react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">description</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"A declarative, efficient, and flexible JavaScript library for building user interfaces.\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">fork</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">forks_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/forks\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">keys_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/keys{/key_id}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">collaborators_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/collaborators{/collaborator}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">teams_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/teams\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">hooks_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/hooks\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">issue_events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/issues/events{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/events\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">assignees_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/assignees{/user}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">branches_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/branches{/branch}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">tags_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/tags\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">blobs_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/blobs{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">git_tags_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/tags{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">git_refs_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/refs{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">trees_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/trees{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">statuses_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/statuses/{sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">languages_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/languages\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">stargazers_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/stargazers\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">contributors_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/contributors\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscribers_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/subscribers\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscription_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/subscription\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">commits_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/commits{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">git_commits_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/git/commits{/sha}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">comments_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/comments{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">issue_comment_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/issues/comments{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">contents_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/contents/{+path}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">compare_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/compare/{base}...{head}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">merges_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/merges\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">archive_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/{archive_format}{/ref}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">downloads_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/downloads\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">issues_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/issues{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">pulls_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/pulls{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">milestones_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/milestones{/number}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">notifications_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/notifications{?since,all,participating}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">labels_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/labels{/name}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">releases_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/releases{/id}\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">deployments_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/repos/facebook/react/deployments\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">created_at</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"2013-05-24T16:15:54Z\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">updated_at</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"2020-09-21T23:38:10Z\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">pushed_at</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"2020-09-21T23:30:41Z\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">git_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"git://github.com/facebook/react.git\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">ssh_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"git@github.com:facebook/react.git\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">clone_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook/react.git\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">svn_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook/react\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">homepage</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://reactjs.org\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">size</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">157796</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">stargazers_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">156180</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">watchers_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">156180</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">language</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"JavaScript\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_issues</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_projects</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_downloads</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_wiki</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">has_pages</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">forks_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">30730</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">mirror_url</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">null</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">archived</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">disabled</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">open_issues_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">575</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">license</span>\\": {
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">key</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"mit\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">name</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MIT License\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">spdx_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MIT\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/licenses/mit\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">node_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MDc6TGljZW5zZTEz\\"</span>
  },
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">forks</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">30730</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">open_issues</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">575</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">watchers</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">156180</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">default_branch</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"master\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">permissions</span>\\": {
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">admin</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">push</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">pull</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">true</span>
  },
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">temp_clone_token</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"\\"</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">organization</span>\\": {
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">login</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">id</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">69631</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">node_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"MDEyOk9yZ2FuaXphdGlvbjY5NjMx\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">avatar_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://avatars3.githubusercontent.com/u/69631?v=4\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">gravatar_id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">html_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://github.com/facebook\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">followers_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/followers\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">following_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/following{/other_user}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">gists_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/gists{/gist_id}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">starred_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/starred{/owner}{/repo}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscriptions_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/subscriptions\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">organizations_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/orgs\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">repos_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/repos\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/events{/privacy}\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">received_events_url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"https://api.github.com/users/facebook/received_events\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">type</span>\\": <span class=\\"__json-string__\\" style=\\"color:#fd971f;\\">\\"Organization\\"</span>,
    \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">site_admin</span>\\": <span class=\\"__json-boolean__\\" style=\\"color:#ac81fe;\\">false</span>
  },
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">network_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">30730</span>,
  \\"<span class=\\"__json-key__\\" style=\\"color:#f92672;\\">subscribers_count</span>\\": <span class=\\"__json-value__\\" style=\\"color:#a6e22e;\\">6696</span>
}</pre>",
        }
      }
    />
  </div>
</div>
`;
